# Codes_develop

./: important_code_collection.md
1. glog/: CMakeLists.txt
1. glog/log/: 20201030-101954.6618  20210202-111351.13756  20210202-135404.6296  20210202-135755.7256  glog-test.INFO
1. glog/src/: glog-test.cpp
10. utils/tictoc/: CMakeLists.txt  tic_toc-test.cpp  tic_toc.hpp  tic_toc_duration.cpp
11. boost-serialization/: CMakeLists.txt  cv_serialization.cpp  derived-base-serialization.cpp  eigen_serialization.cpp  simple-case-no-invasive.cpp  simple-case-test.cpp  stl-member-object.cpp  test_template.cpp
14. pcl/: CMakeLists.txt  registration代码阅读
14. pcl/analysis/: CMakeLists.txt  analysis.cc  em_2d_gaussian_uniform.py  ndt.h  ndt_impl.hpp  test_bad_scan.cc  test_new_voxel_filter.cc  voxel_grid_covariance.h  voxel_grid_covariance.hpp  voxel_grid_internal_config.yml
14. pcl/display/: display.hpp
14. pcl/filter/: filter.hpp
14. pcl/registration/: icp_display.cpp  icp_test.cpp
15. openmp/: CMakeLists.txt  omp_exercise1.cpp  omp_exercise2.cpp  omp_exercise3.cpp  omp_exercise4.cpp  omp_exercise4_for_detail.cpp  omp_exercise4_private_shared.cpp  omp_exercise5.cpp  omp_exercise6_schedule.cpp  omp_exercise7_nested.cpp  omp_exercise8_section.cpp  阅读材料
16. cmake/cmake_practice/t3/: CMakeLists.txt  runhello.sh
16. cmake/self_practice/: CMakeLists.txt  cmake 需要的内容
16. cmake/self_practice/cmake/: PCL.cmake  global_defination.cmake
16. cmake/self_practice/include/: foo.h  global_defination.h.in
16. cmake/self_practice/src/: foo.cc  main.cc
17. sensor_funsion_hw/hw1_ceres_ndt/: CMakeLists.txt  ceres_ndt.cpp  ceres_ndt_se3.h  icp_registration.hpp
17. sensor_funsion_hw/hw3_calibra/: Allen 方差分析.docx  CMakeLists.txt  SO3_RK4_test.cpp  hw_3_2_accel.cpp  hw_3_2_gyro.cpp  hw_3_3.cpp  hw_3_4.cpp  read_csv.h  test.csv  test_hw_3_4.csv
17. sensor_funsion_hw/hw4_filter/: CMakeLists.txt
17. sensor_funsion_hw/hw4_filter/backup/: CMakeLists.txt  ImuTypes.cc  ImuTypes.h  common.cpp  common.h  ekf.cpp  ekf.h  ekf_test.cpp  hw4 作业.docx  task_list
17. sensor_funsion_hw/hw4_filter/config/: eskf.yaml
17. sensor_funsion_hw/hw4_filter/ekf/: ekf_test.cpp  kalman_filter.cpp  kalman_filter.h
17. sensor_funsion_hw/hw4_filter/eskf/: ESKF.md  error_state_kalman_filter.cpp  error_state_kalman_filter.h  eskf_test.cpp
17. sensor_funsion_hw/hw4_filter/module/: ImuTypes.cc  ImuTypes.h  common.cpp  common.h  data_collector.cpp  data_collector.h  kalman_filter_interface.h  measure_module.h  optimization_module.h  read_csv.h
17. sensor_funsion_hw/hw4_filter/optimization_method/: optimization_method.h
18. ros-foxy/src/test_ros2/: CMakeLists.txt  ROS2_demo_nodes.md  ROS2_tutorial_action_server.md  ROS2_tutorial_launch.md  package.xml
19. boost/filesystem/: CMakeLists.txt  filesystem_test.cpp
2. io/data_loader/: CMakeLists.txt  all_path.yaml  data_loader.h  data_loader_func.h  data_loader_func_test.cc  data_loader_test.cpp
2. io/rosbag_convert/: CMakeLists.txt  rosbag_convert.cpp  rosbag_convert.h
20. gtsam/: CMakeLists.txt
20. gtsam/learning_example/: exercise1_create_factor_graph.cpp
21. pangolin/: CMakeLists.txt  pangolin_coordinate.cpp  pangolin_cube.cpp  pointcloud.cpp
22. slam_demo/slam_basic_and_environment/: CMakeLists.txt  PnP.cpp  build_test_environment.h  camera_model.h  common.cpp  common.h  convert.h  environment_builder.cpp  environment_builder.h  frame_interface.h  main_test.cpp  pointcloud_shower.h  target
22. slam_demo/slam_basic_and_environment/doc/: doc.md
25. cpptest/: CMakeLists.txt  class_test.cpp  inherit_test.cpp  macro_test.cpp  new_test.cpp  pointer_diff.cpp  pointer_test.cpp  pure_virtual_mf_inherit.cpp  template_use.cpp
25. cpptest/circular_include/: A.cpp  A.h  B.cpp  B.h  CMakeLists.txt  doc.md  main.cpp
26. g2o/: CMakeLists.txt  aboutG2O
26. g2o/g2o_basic_example/: VE_self_curvefitting.h  VE_self_powell_function.h  covariance_collector.h  g2o_curvefitting.cpp  g2o_powell_function.cpp
26. g2o/g2o_slam_demo/: g2o_icp_so3_r3.cpp  g2o_icp_so3_r3.h  g2o_ndt_internal.h
33. slam_test/: CMakeLists.txt  generate.sh
33. slam_test/config/: program_param.yaml  undistort.yml
33. slam_test/doc/: Process.md  Theory.md
33. slam_test/example/: test_line_match.cpp
33. slam_test/src/: config.cpp  line_extractor.cc  preprocess.cc  tic_toc.cc
38. line_feature/sim/: CMakeLists.txt  ceres_line_cost_function.h  line_geometry.h  line_parameterization.cpp  line_parameterization.h  sim_env.h  test_angle.cc  test_case.cc  test_sim.cc
45. self_backend/eskf/: CMakeLists.txt  all_paths.yml  data_loader.h  data_loader_test.cc  doc.md  new_eskf.h  new_eskf_test.cc
47. basalt/code/: CMakeLists.txt  assert_study.cc  doc.md  optimize.md  pose_graph_test.cc  sim.cpp
5. gtest/: CMakeLists.txt  gtest_1.cpp  gtest_2.cpp  gtest_3.cpp  gtest_test_f.cpp
6. yaml/: CMakeLists.txt  test-config.yaml  yaml-test.cpp
7. eigen/function_test/: CMakeLists.txt  alignment_problem.cpp  eigen-test-array-vector.cpp  eigen_affine.cpp  eigen_equation_solver.cpp  eigen_llt.cpp  eigen_permutation_matrix.cpp  eigen_setup.cpp  eigen_sophus_version.cpp  eigen_svd.cpp  eigen_template.cpp  eigen_template_transpose.cpp  llt_test.cpp  map_test.cpp  matrixXd_map.cpp  omp_test.cpp
8. ceres/: CMakeLists.txt  data.hpp  task
8. ceres/ceres_API_learning/: 2nd-basic-test.cpp  3rd-basic-test.cpp  4th-basic-test.cpp  5th-how-to-write-function-usable-in-ceres.cpp  6th-a-value-return-function-for-autodiff.cpp  7th-value-jacobian-return-function-for-autodiff.cpp  9th-analytic-derivation.cpp  basic-test.cpp  ceres linear solver 选型  ceres注意点总结
8. ceres/ceres_example_reading/: ceres_VINS代码阅读  ceres_pose_graph_3d代码阅读
8. ceres/ceres_self_example/: ceres_icp_analystic_se3.cpp  ceres_icp_analystic_se3_test.cpp  ceres_icp_analystic_so3_r3.cpp  ceres_icp_autodiff_q_r3.cpp  ceres_icp_pose_graph.cpp  ceres_ndt_analystic_se3.h  common.h  eigen_icp_so3_r3.cpp  eigen_svd_icp.cpp  eigen_svd_icp.h  eigen_svd_icp.yaml  eigen_svd_icp_test.cpp
8. ceres/detail_reading/: ceres problem.h代码阅读  problem_h.md
(+501 files in other folders)
