project(cpptest)

set(CMAKE_CXX_FLAGS "-std=c++11 -o3")

# add_executable(macro_test macro_test.cpp)
# add_executable(pure_virtual_mf_inherit pure_virtual_mf_inherit.cpp)

# add_executable(pointer_diff pointer_diff.cpp)

# add_executable(new_test new_test.cpp)

add_executable(inherit_test inherit_test.cpp)

# add_executable(pointer_test pointer_test.cpp)